<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/SearchActionBarButton"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/Search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/VoteButton"
        android:icon="@drawable/votebutton"
        android:title="@string/vote_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/ShareButton"
        android:icon="@drawable/sharebutton"
        android:title="@string/share_text"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/DownloadButton"
        android:title="@string/download_show_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/BookmarkButton"
        android:icon="@drawable/starbutton"
        android:title="@string/bookmark_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/HelpButton"
        android:title="@string/help_text"
        app:showAsAction="never" />
</menu>
