<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_votes"
        android:title="@string/User_Votes"
        android:icon="@drawable/ic_star_24dp" />
    <item
        android:id="@+id/menu_your_shows"
        android:title="@string/Your_Shows"
        android:icon="@drawable/ic_library_music_24px" />
    <item
        android:id="@+id/menu_downloads"
        android:title="@string/Downloads"
        android:icon="@drawable/ic_get_app_24px" />
    <item
        android:id="@+id/menu_now_playing"
        android:title="@string/Now_Playing"
        android:icon="@drawable/ic_play_arrow_24px" />
    <item
        android:id="@+id/menu_browse_artists"
        android:title="@string/Browse_Artists"
        android:icon="@drawable/ic_list_alt_24px" />
</menu>
