<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/colorPrimary"
	android:orientation="vertical">

	<RelativeLayout
		android:id="@+id/instructions_view"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbarAlwaysDrawVerticalTrack="true"
		android:scrollbars="vertical">

		<TextView
			android:id="@+id/NumResultsLabel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:paddingLeft="15dip"
			android:paddingRight="15dip"
			android:text="@string/search_results_number_prompt"
			android:textColor="@color/colorOnPrimary"
			android:textSize="@dimen/text_height_tall"
			android:textStyle="bold"></TextView>

		<TextView
			android:id="@+id/SeekBarValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/SortLabel"
			android:layout_alignParentStart="true"
			android:layout_centerVertical="true"
			android:paddingStart="15dip"
			android:text="20"
			android:textColor="#FFFFFF"
			android:textSize="@dimen/text_height_tall"
			android:textStyle="bold">

		</TextView>

		<SeekBar
			android:id="@+id/NumResultsSeekBar"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/NumResultsLabel"
			android:layout_marginTop="5dip"
			android:layout_toEndOf="@+id/SeekBarValue"
			android:max="40"
			android:paddingLeft="15dip"
			android:paddingRight="15dip"></SeekBar>

		<TextView
			android:id="@+id/SortLabel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/NumResultsSeekBar"
			android:layout_alignParentStart="true"
			android:paddingStart="15dip"
			android:paddingTop="15dip"
			android:paddingEnd="15dip"
			android:text="@string/search_type_prompt"
			android:textColor="@color/colorOnPrimary"
			android:textSize="@dimen/text_height_tall"
			android:textStyle="bold">

		</TextView>

		<Spinner
			android:id="@+id/SortSpinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/SortLabel"
			android:backgroundTint="@color/colorOnPrimary"
			android:paddingLeft="15dip"
			android:paddingRight="15dip"
			android:textColor="@color/colorOnPrimary"
			android:textColorHint="@color/gray_50_a600"
			android:textSize="@dimen/text_height_tall" />

		<TextView
			android:id="@+id/DateLabel"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/SortSpinner"
			android:layout_alignParentStart="true"
			android:paddingStart="15dip"
			android:paddingTop="15dip"
			android:text="@string/search_date_prompt"
			android:textColor="@color/colorOnPrimary"
			android:textSize="@dimen/text_height_tall"
			android:textStyle="bold" />

		<Spinner
			android:id="@+id/DateSpinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/DateLabel"
			android:layout_alignParentStart="true"
			android:layout_marginStart="0dp"
			android:layout_marginTop="2dp"
			android:backgroundTint="@color/colorOnPrimary"
			android:paddingLeft="15dip"
			android:paddingRight="15dip"
			android:textSize="@dimen/text_height_tall" />

		<EditText
			android:id="@+id/MonthText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/DateSpinner"
			android:layout_alignParentStart="false"
			android:layout_toStartOf="@id/DayText"
			android:backgroundTint="@color/colorOnPrimary"
			android:hint="@string/month_text"
			android:inputType="date"
			android:lines="1"
			android:maxLength="2"
			android:textColor="@color/colorOnPrimary"
			android:textColorHint="@color/gray_50_a600"
			android:textSize="@dimen/text_height_tall" />

		<EditText
			android:id="@+id/DayText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/DateSpinner"
			android:layout_toLeftOf="@+id/DateText"
			android:backgroundTint="@color/colorOnPrimary"
			android:hint="@string/day_text"
			android:inputType="date"
			android:lines="1"
			android:maxLength="2"
			android:textColor="@color/colorOnPrimary"
			android:textColorHint="@color/gray_50_a600"
			android:textSize="@dimen/text_height_tall" />

		<EditText
			android:id="@+id/DateText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/DateSpinner"
			android:layout_alignBottom="@+id/DayText"
			android:layout_alignParentEnd="true"
			android:backgroundTint="@color/colorOnPrimary"
			android:hint="@string/year_text"
			android:inputType="date"
			android:lines="1"
			android:maxLength="4"
			android:textColor="@color/colorOnPrimary"
			android:textColorHint="@color/gray_50_a600"
			android:textSize="@dimen/text_height_tall" />

		<Button
			android:id="@+id/SettingsOkayButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/MonthText"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="5dip"
			android:text="@string/okay_text" />

	</RelativeLayout>
</ScrollView>